[gd_scene load_steps=2 format=3 uid="uid://bj3jki1e2lrco"]

[ext_resource type="Script" path="res://scripts/systems/UI/settings/video_settings.gd" id="1_tv8xe"]

[node name="Video" type="TabBar"]
visible = false
metadata/_tab_index = 1

[node name="VideoMarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VideoOptions" type="VBoxContainer" parent="VideoMarginContainer"]
layout_mode = 2
script = ExtResource("1_tv8xe")

[node name="MaxFPS" type="HBoxContainer" parent="VideoMarginContainer/VideoOptions"]
layout_mode = 2

[node name="FpsLabel" type="Label" parent="VideoMarginContainer/VideoOptions/MaxFPS"]
layout_mode = 2
size_flags_horizontal = 3
text = "Max fps"

[node name="fpsOptionButton" type="OptionButton" parent="VideoMarginContainer/VideoOptions/MaxFPS"]
unique_name_in_owner = true
layout_mode = 2
selected = 1
item_count = 6
popup/item_0/text = "30"
popup/item_1/text = "40"
popup/item_1/id = 1
popup/item_2/text = "60"
popup/item_2/id = 2
popup/item_3/text = "90"
popup/item_3/id = 3
popup/item_4/text = "120"
popup/item_4/id = 4
popup/item_5/text = "no limit"
popup/item_5/id = 5

[node name="VsyncOption" type="HBoxContainer" parent="VideoMarginContainer/VideoOptions"]
layout_mode = 2

[node name="vsyncLabel" type="Label" parent="VideoMarginContainer/VideoOptions/VsyncOption"]
layout_mode = 2
size_flags_horizontal = 3
text = "vsync"

[node name="vsyncCheckBox" type="CheckBox" parent="VideoMarginContainer/VideoOptions/VsyncOption"]
unique_name_in_owner = true
layout_mode = 2

[node name="ResolutionOption" type="HBoxContainer" parent="VideoMarginContainer/VideoOptions"]
layout_mode = 2

[node name="ResolutionLabel" type="Label" parent="VideoMarginContainer/VideoOptions/ResolutionOption"]
layout_mode = 2
size_flags_horizontal = 3
text = "Resolution"

[node name="ResolutionOptionButton" type="OptionButton" parent="VideoMarginContainer/VideoOptions/ResolutionOption"]
unique_name_in_owner = true
layout_mode = 2
selected = 1
item_count = 10
popup/item_0/text = "1920x1080"
popup/item_1/text = "1680x1050"
popup/item_1/id = 1
popup/item_2/text = "1600x900"
popup/item_2/id = 2
popup/item_3/text = "1536x864"
popup/item_3/id = 3
popup/item_4/text = "1366x768"
popup/item_4/id = 4
popup/item_5/text = "1280x1024"
popup/item_5/id = 5
popup/item_6/text = "1280x800"
popup/item_6/id = 6
popup/item_7/text = "1024x768"
popup/item_7/id = 7
popup/item_8/text = "960x540"
popup/item_8/id = 8
popup/item_9/text = "800x600"
popup/item_9/id = 9

[node name="ScreenModeOption" type="HBoxContainer" parent="VideoMarginContainer/VideoOptions"]
layout_mode = 2

[node name="ScreenModeLabel" type="Label" parent="VideoMarginContainer/VideoOptions/ScreenModeOption"]
layout_mode = 2
size_flags_horizontal = 3
text = "Screen resolution"

[node name="ScreenModeOptionButton" type="OptionButton" parent="VideoMarginContainer/VideoOptions/ScreenModeOption"]
unique_name_in_owner = true
layout_mode = 2
selected = 1
item_count = 3
popup/item_0/text = "Windowed"
popup/item_0/id = 1
popup/item_1/text = "Fullscreen"
popup/item_1/id = 9
popup/item_2/text = "Maximized"
popup/item_2/id = 2

[connection signal="item_selected" from="VideoMarginContainer/VideoOptions/MaxFPS/fpsOptionButton" to="VideoMarginContainer/VideoOptions" method="_on_fps_option_button_item_selected"]
[connection signal="toggled" from="VideoMarginContainer/VideoOptions/VsyncOption/vsyncCheckBox" to="VideoMarginContainer/VideoOptions" method="_on_vsync_check_box_toggled"]
[connection signal="item_selected" from="VideoMarginContainer/VideoOptions/ResolutionOption/ResolutionOptionButton" to="VideoMarginContainer/VideoOptions" method="_on_resolution_option_button_item_selected"]
[connection signal="item_selected" from="VideoMarginContainer/VideoOptions/ScreenModeOption/ScreenModeOptionButton" to="VideoMarginContainer/VideoOptions" method="_on_screen_mode_option_button_item_selected"]
